[DAT-3087] Added api logic for showing unplanned items
