# api_server/openapi_server/models/planning_items_list.py
@@ -6,10 +6,14 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
+from openapi_server.models.engineer import Engineer
 from openapi_server.models.planning_item import PlanningItem
+from openapi_server.models.work_item import WorkItem
 from openapi_server import util
 
+from openapi_server.models.engineer import Engineer  # noqa: E501
 from openapi_server.models.planning_item import PlanningItem  # noqa: E501
+from openapi_server.models.work_item import WorkItem  # noqa: E501
 
 class PlanningItemsList(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -17,26 +21,36 @@ class PlanningItemsList(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, links=None, items=None):  # noqa: E501
+    def __init__(self, links=None, items=None, unplanned_engineers=None, unplanned_workitems=None):  # noqa: E501
         """PlanningItemsList - a model defined in OpenAPI
 
         :param links: The links of this PlanningItemsList.  # noqa: E501
         :type links: object
         :param items: The items of this PlanningItemsList.  # noqa: E501
         :type items: List[PlanningItem]
+        :param unplanned_engineers: The unplanned_engineers of this PlanningItemsList.  # noqa: E501
+        :type unplanned_engineers: List[Engineer]
+        :param unplanned_workitems: The unplanned_workitems of this PlanningItemsList.  # noqa: E501
+        :type unplanned_workitems: List[WorkItem]
         """
         self.openapi_types = {
             'links': object,
-            'items': List[PlanningItem]
+            'items': List[PlanningItem],
+            'unplanned_engineers': List[Engineer],
+            'unplanned_workitems': List[WorkItem]
         }
 
         self.attribute_map = {
             'links': '_links',
-            'items': 'items'
+            'items': 'items',
+            'unplanned_engineers': 'unplanned_engineers',
+            'unplanned_workitems': 'unplanned_workitems'
         }
 
         self._links = links
         self._items = items
+        self._unplanned_engineers = unplanned_engineers
+        self._unplanned_workitems = unplanned_workitems
 
     @classmethod
     def from_dict(cls, dikt) -> 'PlanningItemsList':
@@ -90,4 +104,46 @@ class PlanningItemsList(Model):
         """
 
         self._items = items
+
+    @property
+    def unplanned_engineers(self):
+        """Gets the unplanned_engineers of this PlanningItemsList.
+
+
+        :return: The unplanned_engineers of this PlanningItemsList.
+        :rtype: List[Engineer]
+        """
+        return self._unplanned_engineers
+
+    @unplanned_engineers.setter
+    def unplanned_engineers(self, unplanned_engineers):
+        """Sets the unplanned_engineers of this PlanningItemsList.
+
+
+        :param unplanned_engineers: The unplanned_engineers of this PlanningItemsList.
+        :type unplanned_engineers: List[Engineer]
+        """
+
+        self._unplanned_engineers = unplanned_engineers
+
+    @property
+    def unplanned_workitems(self):
+        """Gets the unplanned_workitems of this PlanningItemsList.
+
+
+        :return: The unplanned_workitems of this PlanningItemsList.
+        :rtype: List[WorkItem]
+        """
+        return self._unplanned_workitems
+
+    @unplanned_workitems.setter
+    def unplanned_workitems(self, unplanned_workitems):
+        """Sets the unplanned_workitems of this PlanningItemsList.
+
+
+        :param unplanned_workitems: The unplanned_workitems of this PlanningItemsList.
+        :type unplanned_workitems: List[WorkItem]
+        """
+
+        self._unplanned_workitems = unplanned_workitems
 # flake8: noqa
