# api_server/openapi_server/openapi/openapi.yaml
@@ -796,10 +796,90 @@ components:
     PlanningItemsList:
       description: A collection of planned items.
       example:
+        unplanned_workitems:
+        - _links: '{}'
+          start_timestamp: 2000-01-23T04:56:07.000+00:00
+          city: city
+          administration: administration
+          project: project
+          description: description
+          resolve_before_timestamp: 2000-01-23T04:56:07.000+00:00
+          house: house
+          end_timestamp: 2000-01-23T04:56:07.000+00:00
+          street: street
+          extra: extra
+          id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+          zip: zip
+          last_updated: 2000-01-23T04:56:07.000+00:00
+          employee_name: employee_name
+          sub_order_id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+          is_geocoded: true
+          stagnation: true
+          employee_number: employee_number
+          geometry:
+            type: Point
+            coordinates:
+            - 5.2
+            - 52.4
+          l2_guid: l2_guid
+          category: category
+          task_type: task_type
+          order_id: order_id
+          status: status
+        - _links: '{}'
+          start_timestamp: 2000-01-23T04:56:07.000+00:00
+          city: city
+          administration: administration
+          project: project
+          description: description
+          resolve_before_timestamp: 2000-01-23T04:56:07.000+00:00
+          house: house
+          end_timestamp: 2000-01-23T04:56:07.000+00:00
+          street: street
+          extra: extra
+          id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+          zip: zip
+          last_updated: 2000-01-23T04:56:07.000+00:00
+          employee_name: employee_name
+          sub_order_id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+          is_geocoded: true
+          stagnation: true
+          employee_number: employee_number
+          geometry:
+            type: Point
+            coordinates:
+            - 5.2
+            - 52.4
+          l2_guid: l2_guid
+          category: category
+          task_type: task_type
+          order_id: order_id
+          status: status
         _links: '{}'
         items:
         - _embedded: '{}'
         - _embedded: '{}'
+        unplanned_engineers:
+        - driver_name: Billy Gates
+          division: "90117"
+          license_plate: AA-123-BB
+          _links: '{}'
+          administration: Klantteam Noord
+          id: "123456789"
+          driver_skill: Metende
+          business_unit: NLS
+          token: hyrde/token/302010
+          driver_employee_number: "1234"
+        - driver_name: Billy Gates
+          division: "90117"
+          license_plate: AA-123-BB
+          _links: '{}'
+          administration: Klantteam Noord
+          id: "123456789"
+          driver_skill: Metende
+          business_unit: NLS
+          token: hyrde/token/302010
+          driver_employee_number: "1234"
       properties:
         _links:
           properties:
@@ -811,6 +891,14 @@ components:
         items:
           items:
             $ref: '#/components/schemas/PlanningItem'
+          type: array
+        unplanned_engineers:
+          items:
+            $ref: '#/components/schemas/Engineer'
+          type: array
+        unplanned_workitems:
+          items:
+            $ref: '#/components/schemas/WorkItem'
           type: array
     PlanningItem:
       description: A single planned item generated by the SNBPlanning Engine.
